# webapp-template

./: .env  .genignore  .gitignore  Cargo.toml  README.md  REQUIREMENTS.md  Settings.toml  build_webclient.sh  diesel.toml
db/: create_db.sql  create_test_db.sql
migrations/2020-01-07-182832_create_users/: up.sql
server/: Cargo.toml
server/src/: dao.rs  http.rs  main.rs  settings.rs
server/src/core/: service.rs
server/src/core/model/: user.rs
server/src/core/service/: user.rs
server/src/dao/: schema.rs  user.rs
server/src/dao/dto/: user.rs
server/src/http/: dto.rs  handler.rs
webclient/: Cargo.toml
webclient/src/: components.rs  dto.rs  lib.rs  main.rs  root.rs  widget.rs
webclient/src/components/: add_user.rs  button.rs  input.rs  root.rs  user_table.rs
webclient/src/dto/: user.rs
webclient/static/: index.html  main.css
webclient/static/mdc/: icon.css
