[package]
name = "webapp-server"
version = "0.1.0"
authors = ["Noogen Team <info.noogen@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/noogen-projects/{{project-name}}"
description = "A Rust web application ..."
keywords = ["noogen"]
categories = []

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
diesel = { version = "1.0.0", features = ["mysql", "r2d2"] }