[package]
name = "webapp-server"
version = "0.1.0"
authors = ["Noogen Team <info.noogen@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/noogen-projects/{{project-name}}"
description = "A Rust web application ..."
keywords = ["noogen"]
categories = []

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
diesel = { version = "1.0.0", features = ["mysql", "r2d2"] }
serde = { version = "1.0.104", features = ["derive"] }
config = "0.10.1"
log = "0.4.8"
env_logger = "0.7.1"

[dev-dependencies]
serde_json = "1.0.48"